# servant-cookie-hmac-auth-example

./: LICENSE  README.md  backend.cabal  stack.yaml
app/: InitialData.hs  Main.hs
config/: client_session_key.aes
src/: Api.hs  AuthReqBody.hs  AuthReqBodyCheck.hs  Config.hs  CookieAuth.hs  CookieAuthCheck.hs  HmacAuth.hs  Models.hs  Password.hs  Session.hs
src/Api/: PrivateAuthReqBody.hs  PrivateCookie.hs  Session.hs
