name:                backend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tlaitinen/servant-cookie-hmac-auth-example
license:             BSD3
license-file:        LICENSE
author:              Tero Laitinen
maintainer:          tero.laitinen@iki.fi
copyright:           2016 Tero Laitinen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:     
    Password
    Models
    Session
    Config
    CookieAuth
    CookieAuthCheck
    AuthReqBody
    AuthReqBodyCheck
    HmacAuth
    Api
    Api.Session
    Api.PrivateCookie
    Api.PrivateAuthReqBody
  build-depends:       
    base >= 4.7 && < 5
    , persistent
    , persistent-template
    , mtl
    , monad-logger
    , transformers
    , bytestring
    , persistent-postgresql
    , wai
    , wai-extra
    , servant
    , servant-server
    , text
    , time
    , aeson
    , pwstore-fast
    , clientsession
    , base64-bytestring
    , cookie
    , blaze-builder
    , data-default
    , esqueleto
    , SHA
    , http-types
    , string-conversions

  default-language:    Haskell2010

executable backend-exe
  hs-source-dirs:      app 
  main-is:             Main.hs
  other-modules:
    InitialData
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base
    , backend
    , persistent-postgresql
    , persistent
    , warp
    , transformers
    , aeson
    , bytestring
    , clientsession
 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/backend
